@@ -345,8 +345,8 @@ body {
 .reveal .controls div {
 	position: absolute;
 	opacity: 0.1;
-	width: 0;
-	height: 0;
+	width: 0; 
+	height: 0; 
 	border: 12px solid transparent;
 
 	-webkit-transition: opacity 0.2s ease;
@@ -1185,12 +1185,35 @@ body {
 	background: rgba( 200, 50, 30, 0.6 );
 }
 .soothe .reveal .state-background {
-	background: rgba( 50, 200, 90, 0.4 );
+	background: rgba( 255, 102, 0, 0.6 );
 }
 .blackout .reveal .state-background {
 	background: rgba( 0, 0, 0, 0.6 );
 }
-
+.red .reveal .state-background {
+	background: rgba( 255, 0, 0, 1 );
+}
+.orange .reveal .state-background {
+	background: rgba( 255, 165, 0, 1 );
+}
+.yellow .reveal .state-background {
+	background: rgba( 255, 255, 0, 1 );
+}
+.green .reveal .state-background {
+	background: rgba( 0, 128, 0, 1 );
+}
+.blue .reveal .state-background {
+	background: rgba( 0, 0, 255, 1 );
+}
+.indigo .reveal .state-background {
+	background: rgba( 75, 0, 130, 1 );
+}
+.violet .reveal .state-background {
+	background: rgba( 238, 130, 238, 1 );
+}
+.brown .reveal .state-background {
+	background: rgba( 139, 69, 19, 1 );
+}
 
 /*********************************************
  * RTL SUPPORT
@@ -1257,4 +1280,5 @@ body {
 .zoomed .reveal .roll span:after {
 	visibility: hidden;
 }
+
 
